# GLClasses

./: .gitignore  CMakeLists.txt
GL4/: CMakeLists.txt  main.cpp
GL4/shaders/: program1.frag  program1.vert
NGL/: CMakeLists.txt
NGL/dependencies/include/GLFW/: glfw3.h  glfw3native.h
NGL/dependencies/include/glad/: glad.h
NGL/dependencies/src/: glad.c
NGL/include/NGL/: Buffers.h  Colors.h  NGraphics.h  Program.h  Texture.h  Window.h
NGL/src/: Buffers.cpp  Program.cpp  Texture.cpp  Window.cpp
