cmake_minimum_required(VERSION 3.24 FATAL_ERROR)

get_filename_component(TARGET_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

project(${TARGET_NAME})

set(DEPENDENCIES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependencies PARENT_SCOPE)
set(LIB_NAME ${TARGET_NAME} PARENT_SCOPE)


file(GLOB_RECURSE TARGET_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

file(GLOB_RECURSE TARGET_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

file(GLOB_RECURSE TARGET_EXTRA_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.txt
	${CMAKE_CURRENT_SOURCE_DIR}/*.md)

set(TARGET_FILES ${TARGET_HEADER_FILES} ${TARGET_SOURCE_FILES} ${TARGET_EXTRA_FILES})
set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library(${TARGET_NAME} STATIC ${TARGET_FILES})

target_include_directories(${TARGET_NAME}
	PUBLIC ${TARGET_INCLUDE_DIR}/NGL
	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/include)


if (MSVC)
	target_compile_options(${TARGET_NAME} PRIVATE /W4 /Wall)
elseif(LINUX)
	target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wshadow -Wpedantic)
endif()

target_link_libraries(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/lib/glfw3.lib)